fixed the images being cropped to height of "--g" in gallery class.
The main issue due to the interaction between ```grid-area``` and ```clip-path``` properties

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -104,6 +104,9 @@ body {
 
 .gallery img:nth-child(2) {
   grid-area: 1/2 / span 2 / span 2;
+  transition: clip-path 0.1s ease-in-out;
+}
+.clipped2 {
   clip-path: polygon(
     0 0,
     100% 0,
@@ -114,6 +117,9 @@ body {
 }
 .gallery img:nth-child(3) {
   grid-area: 2/1 / span 2 / span 2;
+  transition: clip-path 0.1s ease-in-out;
+}
+.clipped3 {
   clip-path: polygon(
     0 0,
     calc(50% - var(--g) / 4) 0,
